# surrealism

./: .envrc  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/demo/: Cargo.toml  surrealism.toml
crates/demo/src/: lib.rs
crates/surrealism/: Cargo.toml
crates/surrealism-cli/: Cargo.toml
crates/surrealism-cli/src/: host.rs  main.rs
crates/surrealism-cli/src/commands/: mod.rs
crates/surrealism-cli/src/commands/info/: mod.rs
crates/surrealism-cli/src/commands/run/: mod.rs
crates/surrealism-cli/src/commands/sig/: mod.rs
crates/surrealism-macros/: Cargo.toml
crates/surrealism-macros/src/: lib.rs
crates/surrealism-runtime/: Cargo.toml
crates/surrealism-runtime/src/: capabilities.rs  config.rs  controller.rs  host.rs  kv.rs  lib.rs  main.rs  package.rs  targets_serde.rs
crates/surrealism-types/: Cargo.toml
crates/surrealism-types/src/: arg.rs  args.rs  array.rs  bytes.rs  controller.rs  convert.rs  datetime.rs  duration.rs  err.rs  kind.rs  kindof.rs  lib.rs  number.rs  object.rs  serialize.rs  string.rs  thing.rs  tuple.rs  utils.rs  uuid.rs  value.rs
crates/surrealism/src/: controller.rs  err.rs  imports.rs  lib.rs  memory.rs  registry.rs
scripts/: rebuild.sh
spec/: v1.md
test/: build-cli.sh  build-demo.sh  build.sh  demo.surli  full.sh  run.sh  test.sh
