[workspace]
members = [
    "crates/demo",
    "crates/surrealism",
    "crates/surrealism-cli",
    "crates/surrealism-macros",
    "crates/surrealism-runtime",
    "crates/surrealism-types"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.80"
thiserror = "1.0.57"
clap = { version = "4.5.40", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.108"
semver = "1.0.20"
toml = "0.8.10"
tar = "0.4.40"
zstd = "0.13.0"
wasmtime = { version = "34.0.1", default-features = false, features = ["cranelift"] }
wasmtime-wasi = "34.0.1"
surrealdb = { version = "2.3.6", default-features = false, features = ["kv-mem"] }
uuid = "1.8.0"
chrono = "0.4.38"
tempfile = "3.10.0"
walrus = "0.20.3"
wasm-opt = "0.116.0"