[workspace]
members = [
    "crates/demo",
    "crates/surrealism",
    "crates/surrealism-cli",
    "crates/surrealism-macros",
    "crates/surrealism-runtime",
    "crates/surrealism-types"
]
resolver = "2"

[workspace.package]
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
edition = "2024"
license-file = "LICENSE"
description = "A scalable, distributed, collaborative, document-graph database, for the realtime web"
repository = "https://github.com/surrealdb/surrealdb"
homepage = "https://github.com/surrealdb/surrealdb"
keywords = [
    "database",
    "embedded-database",
    "key-value",
    "key-value-store",
    "kv-store",
]
categories = ["database-implementations", "data-structures", "embedded"]

[workspace.dependencies]
# Internal crates
surrealism = { version = "=0.1.6", path = "crates/surrealism" }
surrealism-cli = { version = "=0.1.6", path = "crates/surrealism-cli" }
surrealism-macros = { version = "=0.1.6", path = "crates/surrealism-macros", default-features = false }
surrealism-runtime = { version = "=0.1.6", path = "crates/surrealism-runtime" }
surrealism-types = { version = "=0.1.6", path = "crates/surrealism-types", default-features = false }

# SurrealDB dependencies
surrealdb-core = { version = "=3.0.0-beta.1", default-features = false }
surrealdb-types = { version = "=3.0.0-beta.1" }

# Core dependencies
anyhow = "1.0.100"
async-trait = "0.1.88"
bytes = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
semver = "1.0.27"
serde = "1.0.209"
serde_json = "1.0.145"
syn = { version = "2.0", features = ["full"] }
tar = "0.4.40"
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1.44.2", default-features = false }
toml = "0.8.10"
walrus = "0.20.3"
wasm-opt = "0.116.0"
wasmtime = { version = "34.0.1", default-features = false, features = ["cranelift", "winch"] }
wasmtime-wasi = "34.0.1"
zstd = "0.13.0"

[workspace.lints.clippy]

# Checks for usage of `#[allow]` attribute and suggests replacing it with `#[expect]`.
# `#[expect]` attributes suppress the lint emission, but emit a warning if the expectation is unfulfilled.
# This is useful to be notified when the lint is no longer triggered.
# https://rust-lang.github.io/rust-clippy/master/#allow_attributes
# TODO(stu): We should try to replace all of these with `#[expect]` instead. Setting to `allow` for now to avoid
# more changes.
allow_attributes = "allow"

# Checks for code like `foo = bar.clone();`.
# Custom `Clone::clone_from()` or `ToOwned::clone_into` implementations allow the objects to share resources and
# therefore avoid allocations.
# https://rust-lang.github.io/rust-clippy/master/#assigning_clones
assigning_clones = "warn"

# Checks for the usage of `as _` conversion using inferred type.
# https://rust-lang.github.io/rust-clippy/master/#cloned_instead_of_copied
cloned_instead_of_copied = "warn"

# Checks for function/method calls with a mutable parameter in `debug_assert!`, `debug_assert_eq!` and
# `debug_assert_ne!` macros.
# In release builds `debug_assert!` macros are optimized out by the compiler. Therefore mutating something in a
# `debug_assert!` macro results in different behavior between a release and debug build.
# https://rust-lang.github.io/rust-clippy/master/#debug_assert_with_mut_call
debug_assert_with_mut_call = "warn"

# Denies the configured methods and functions in `clippy.toml`.
# Some methods are undesirable in certain contexts, and it’s beneficial to lint for them as needed.
# https://rust-lang.github.io/rust-clippy/master/#disallowed_methods
disallowed_methods = "warn"

# Checks for impls of `From<..>` that contain `panic!()` or `unwrap()`
# TryFrom should be used if there’s a possibility of failure.
# https://rust-lang.github.io/rust-clippy/master/#fallible_impl_from
fallible_impl_from = "warn"

# Checks for usage of `.get().unwrap()` (or `.get_mut().unwrap()`) on a standard library type which implements Index.
# Using the Index trait ([]) is more clear and more concise.
# https://rust-lang.github.io/rust-clippy/master/#get_unwrap
get_unwrap = "warn"

# Checks for the usage of `_.to_owned()`, `vec.to_vec()`, or similar when calling `_.clone()` would be clearer.
# https://rust-lang.github.io/rust-clippy/master/#implicit_clone
implicit_clone = "warn"

# Checks for usage of `.to_string()` on an `&&T` where `T` implements `ToString` directly (like `&&str` or `&&String`).
# This bypasses the specialized implementation of ToString and instead goes through the more expensive string
# formatting facilities.
# https://rust-lang.github.io/rust-clippy/master/#inefficient_to_string
inefficient_to_string = "warn"

# Checks for whole number float literals that cannot be represented as the underlying type without loss.
# If the value was intended to be exact, it will not be. This may be especially surprising when the lost precision
# is to the left of the decimal point.
# https://rust-lang.github.io/rust-clippy/master/#lossy_float_literal
lossy_float_literal = "warn"

# Checks for functions that are declared `async` but have no `.await`s inside of them.
# Async functions with no async code create overhead, both mentally and computationally.
# https://rust-lang.github.io/rust-clippy/master/#unused_async
#
# SurrealDB relies on async functions in the AST parser and executor to avoid stack overflows.
# Warning or denying this lint can cause unexpected errors.
unused_async = "allow"

# Profiles
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
strip = true

[profile.bench]
strip = false

[profile.make]
inherits = "dev"

[profile.profiling]
debug = true
inherits = "release"
strip = false

# [net]
# git-fetch-with-cli = true
