[package]
name = "demo"
version = "0.1.0"
edition = "2021"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "Demo for Surrealism."
license-file = "LICENSE"
repository = "https://github.com/surrealdb/surrealdb"
homepage = "https://github.com/surrealdb/surrealdb"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
surrealism = { path = "../surrealism" }
