[package]
name = "surrealism-cli"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = "4.5.40"
serde_json = "1.0"
surrealdb.workspace = true
surrealism-runtime = { version = "3.0.0", path = "../surrealism-runtime" }
tar = "0.4.44"
tempfile = "3.8"
walrus = "0.20.3"
wasm-opt = "0.116.0"
zstd = "0.13.3"

[lints]
workspace = true
