[package]
name = "surrealism-cli"
version = "0.1.0"
edition = "2021"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "CLI for Surrealism."
license-file = "LICENSE"
repository = "https://github.com/surrealdb/surrealdb"
homepage = "https://github.com/surrealdb/surrealdb"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
surrealism = { path = "../surrealism" }
surrealism-types = { path = "../surrealism-types" }
surrealism-runtime = { path = "../surrealism-runtime" }
async-trait.workspace = true
tempfile.workspace = true
walrus.workspace = true
wasm-opt.workspace = true