[package]
name = "surrealism-macros"
version = "0.1.6"
description = "Macros for Surrealism"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true