[package]
name = "surrealism-runtime"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
surrealdb.workspace = true
surrealism-types = { version = "3.0.0", path = "../surrealism-types" }
thiserror = "2.0.12"
uuid.workspace = true
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"

[lints]
workspace = true
