[package]
name = "surrealism-runtime"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
chrono.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
semver = "1.0.26"
serde = "1.0.219"
surrealdb.workspace = true
surrealism-types = { version = "3.0.0", path = "../surrealism-types" }
tar = "0.4.44"
thiserror = "2.0.12"
toml = "0.8.23"
uuid.workspace = true
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"
zstd = "0.13.3"

[lints]
workspace = true
