[package]
name = "surrealism-types"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono.workspace = true
libc.workspace = true
surrealdb.workspace = true
thiserror = "2.0.12"
uuid.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
