[package]
name = "surrealism-types"
version = "0.1.0"
edition = "2021"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "Types for Surrealism."
license-file = "LICENSE"
repository = "https://github.com/surrealdb/surrealdb"
homepage = "https://github.com/surrealdb/surrealdb"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
surrealdb.workspace = true
chrono.workspace = true
