[package]
name = "surrealism"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
surrealdb.workspace = true
surrealism-macros = { version = "3.0.0", path = "../surrealism-macros" }
surrealism-types = { version = "3.0.0", path = "../surrealism-types" }
thiserror = "2.0.12"

[lints]
workspace = true
